--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.profiles.active=dev
 
 # ???????
-spring.datasource.url=jdbc:sqlserver://192.168.107.193:1433;databaseName=CognitiveChainPavilion
+spring.datasource.url=jdbc:sqlserver://192.168.107.193:1433;databaseName=CognitiveChainPavilion;trustServerCertificate=true
 spring.datasource.username=cognitive_user
 spring.datasource.password=StrongPassword123!
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
@@ -38,3 +38,6 @@ server.servlet.encoding.force=true
 logging.level.org.chainpavilion=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=INFO
+
+# 允许循环依赖（解决启动问题）
+spring.main.allow-circular-references=true
