--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,43 +1,57 @@
-# ??????
 spring.profiles.active=dev
 
-# ???????
+
 spring.datasource.url=jdbc:sqlserver://192.168.107.193:1433;databaseName=CognitiveChainPavilion;trustServerCertificate=true
 spring.datasource.username=cognitive_user
 spring.datasource.password=StrongPassword123!
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
-# ?????
+
 spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.maximum-pool-size=5
 
-# JPA??
-# ????/????????
+
 spring.jpa.hibernate.ddl-auto=update
-# ??SQL???????
+
 spring.jpa.show-sql=true
-# ??SQL Server??
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-# ??????SQL??
+
 spring.jpa.properties.hibernate.format_sql=true
 
-# JWT??
-# JWT?????????????????????
+
 jwt.secret=zhilianzhige_secure_jwt_secret_key_2025
-# JWT??????????????24??
 jwt.expiration=86400000
 
-# ?????
 server.port=8080
-# ????
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
+server.servlet.encoding.force-request=true
+server.servlet.encoding.force-response=true
 
-# ????
+
 logging.level.org.chainpavilion=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=INFO
 
-# 允许循环依赖（解决启动问题）
+
 spring.main.allow-circular-references=true
+
+
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=never
+server.error.include-exception=false
+
+
+spring.web.resources.static-locations=classpath:/static/
+spring.web.resources.cache.period=0
+spring.web.resources.chain.strategy.content.enabled=true
+spring.web.resources.chain.strategy.content.paths=/**
+spring.web.resources.chain.strategy.fixed.enabled=true
+spring.web.resources.chain.strategy.fixed.paths=/js/**,/css/**,/images/**
+spring.web.resources.chain.strategy.fixed.version=v1
+
+spring.mvc.view.prefix=/
+spring.mvc.view.suffix=.html
