--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,3 +55,7 @@ spring.web.resources.chain.strategy.fixed.version=v1
 
 spring.mvc.view.prefix=/
 spring.mvc.view.suffix=.html
+
+# JWT配置
+app.jwt.secret=知链智阁安全密钥123456789abcdefghijklmnopqrstuvwxyz
+app.jwt.expiration=86400000
